# individualized-pate-pets-submission-

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
experiment_plans/paper_experiments/: readme.md  run_single_mnist_script.sh
experiment_plans/paper_experiments/grouped_data_collection/: run_row_2.sh  run_table_4.sh  run_upsample_ratio_plot.sh
experiment_plans/reviewer_response_experiments/: run_single_experiment.sh  run_table_1__svhn.sh
experiment_plans/set_5_paper_submission/: run_single_mnist_script.sh
experiment_plans/set_6_reviewer_response/: run_single_experiment.sh
experiment_plans/set_6_reviewer_response/reproducing_pate_student/: run_cifar10_table.sh  run_mnist_table.sh  run_svhn_table_1.sh  svhn_bak.sh
individualized_pate/: .gitignore  hprms_search.py  main.py  teacher_accuracy_test_script.sh  teacher_accuracy_tests.py
individualized_pate/data/: data_factory.py
individualized_pate/experiments/: experiment_factory.py
individualized_pate/experiments/pytorch/: train_student.py  train_teacher.py  vote.py
individualized_pate/models/pytorch/: classifier_wrapper.py  pytorch_model.py
individualized_pate/privacy/: pate.py
individualized_pate/studies/: parameters.py  run_votings.py  train_students.py  train_teachers.py
notebooks/adult/experiments/: analyze_votings.ipynb
notebooks/mnist/: explore_mnist.ipynb
tests/: .gitignore
tests/data/: test_data_augmentation.py  test_load_datasets.py  test_split_data.py
tests/models/: test_classifier_wrapper.py
tests/privacy/: test_privacy.py
tests/studies/: test_parameters.py
(+18 files in other folders)
