[tool.poetry]

name = "individualized_pate"

version = "1.0.0"

description = "This repository provides an implementation of PATE, as well as extensions of it to enable the personalization of privacy preservation, and a framework for experimentation. The code is designed in an object-oriented manner."

authors = []

readme = "README.md"

packages = [{include = "individualized_pate"}]



[tool.poetry.scripts]

ppp-generate-prms = "individualized_pate.hprms_search:generate_prms"
ppp-hprms-search = "individualized_pate.hprms_search:hprms_search"
ppp-run = "individualized_pate.main:main"
ppp-run-experiment-set = "individualized_pate.main:run_experiment_set"


[tool.poetry.dependencies]
python = ">=3.9, <3.10"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
click = "^8.1.3"
seaborn = "^0.11.2"
scipy = "^1.8.1"
loguru = "^0.6.0"
tqdm = "^4.64.0"
PyYAML = "^6.0"
scikit-learn = "^1.2.0"
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
bpython = "^0.22.1"
yapf = "^0.32.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
